NIFI-12832: Eliminated unnecessary dependencies from nifi-mock; moved StandardValidators to nifi-api; broke apart FormatUtils into FormatUtils and TimeFormat classes, with TimeFormat existing in nifi-api